new film-banner.component

--- a/apps/ux-films-finder/src/app/components/banner/film-banner.component.html
+++ b/apps/ux-films-finder/src/app/components/banner/film-banner.component.html
@@ -34,12 +34,7 @@
           </div>
         </div>
         <div *ngIf="film.filmLength" class="film-banner__description-row">
-          <div
-            *ngIf="film.rating && film.filmLength"
-            class="film-banner__description-title"
-          >
-            Продолжительность
-          </div>
+          <div class="film-banner__description-title">Продолжительность</div>
           <div class="film-banner__description-info">
             {{ film?.filmLength }}
           </div>
