--- a/apps/ux-films-finder/src/app/components/details/details.component.html
+++ b/apps/ux-films-finder/src/app/components/details/details.component.html
@@ -1,5 +1,5 @@
 <div class="film-details">
-  <div class="stripe"></div>
+  <div class="film-details__stripe"></div>
   <ng-container *ngIf="filmInfo">
     <div class="film-details__main-info">
       <img
