--- a/apps/ux-films-finder/src/app/components/person-spouses/person-spouses.component.less
+++ b/apps/ux-films-finder/src/app/components/person-spouses/person-spouses.component.less
@@ -25,11 +25,11 @@
     white-space: nowrap;
     color: @color-green-04;
     text-decoration: none;
-  }
-  &:hover &__spouses-link,
-  &:active &__spouses-link,
-  &:focus &__spouses-link {
-    color: @color-green-04;
+    &:hover,
+    &:active,
+    &:focus {
+      color: @color-green-04;
+    }
   }
 }
 .theme-dark {
