fixed less, ts files

--- a/apps/ux-films-finder/src/app/components/header/header.component.html
+++ b/apps/ux-films-finder/src/app/components/header/header.component.html
@@ -42,7 +42,10 @@
       </div>-->
     </div>
     <mat-sidenav #sidenav role="navigation">
-      <ff-sidenav-list (sidenavClose)="sidenav.close()"></ff-sidenav-list>
+      <ff-sidenav-list
+        *ngIf="!laptop"
+        (sidenavClose)="sidenav.close()"
+      ></ff-sidenav-list>
     </mat-sidenav>
   </div>
 </header>
