--- a/apps/ux-films-finder/src/app/components/header/header.component.less
+++ b/apps/ux-films-finder/src/app/components/header/header.component.less
@@ -75,7 +75,8 @@
     font-size: 20px;
     background: none;
     text-decoration: none;
-    color: white;
+    color: @color-white-ff;
+    font-family: 'Bellota Text';
   }
 
   &__link:hover {
@@ -83,6 +84,7 @@
   }
   &__toogle {
     display: none;
+    color: @color-white-ff;
   }
 
   &__right-side {
@@ -101,7 +103,6 @@
     height: 50px;
     font-size: 50px;
     margin-right: 34px;
-    color: @color-white-ff;
   }
 
   &__search {
@@ -116,6 +117,7 @@
   &__search-icon-hidden.mat-icon {
     display: none;
     margin-top: 5px;
+    color: @color-white-ff;
   }
 }
 
@@ -276,7 +278,8 @@
     &__link,
     &__text,
     &__search-icon-hidden,
-    &__navigation {
+    &__navigation,
+    &__toogle {
       color: @color-green-69;
     }
   }
