--- a/apps/ux-films-finder/src/app/components/search/search.component.less
+++ b/apps/ux-films-finder/src/app/components/search/search.component.less
@@ -48,6 +48,10 @@
     margin-bottom: 15px;
     align-items: center;
     margin-left: 10px;
+    &:hover {
+      cursor: pointer;
+      color: @color-green-69;
+    }
   }
   &__results-list-item.mat-list-item {
     display: flex;
@@ -90,8 +94,11 @@
     margin: 0px 0px 0px 22px;
     padding: 0;
     font-size: 18px;
+    cursor: pointer;
+    &:hover {
+      color: @color-white-ff;
+    }
   }
-
   &__show-more {
     display: flex;
     align-items: center;
