--- a/apps/ux-films-finder/src/app/components/video/video.component.html
+++ b/apps/ux-films-finder/src/app/components/video/video.component.html
@@ -1,82 +1,15 @@
 <div class="player-wrapper">
   <div *ngFor="let videoItem of videos$ | async | slice: 0:1">
-    <h3>Simple Video Player</h3>
     <h3>{{ videoItem.name }}</h3>
-    <h3>{{ videoItem.url }}</h3>
     <iframe
-      width="560"
-      height="315"
-      [attr.src]="link"
+      width="1560"
+      height="815"
+      *ngIf="!!link; else showNotFound"
+      [src]="link"
       title="YouTube video player"
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
       allowfullscreen
     ></iframe>
-    <h3>{{ yturl }}</h3>
-    <div class="player-wrapper">
-      <h3>Simple Video Player</h3>
-      <button *ngIf="isClicked"></button>
-      <div class="player-wrapper">
-        <h3>Video Player with Controls</h3>
-
-        <vg-player>
-          <vg-overlay-play></vg-overlay-play>
-          <vg-buffering></vg-buffering>
-
-          <vg-scrub-bar>
-            <vg-scrub-bar-current-time></vg-scrub-bar-current-time>
-            <vg-scrub-bar-buffering-time></vg-scrub-bar-buffering-time>
-          </vg-scrub-bar>
-
-          <vg-controls>
-            <vg-play-pause></vg-play-pause>
-            <vg-playback-button></vg-playback-button>
-
-            <vg-time-display
-              vgProperty="current"
-              vgFormat="mm:ss"
-            ></vg-time-display>
-
-            <vg-scrub-bar style="pointer-events: none"></vg-scrub-bar>
-
-            <vg-time-display
-              vgProperty="left"
-              vgFormat="mm:ss"
-            ></vg-time-display>
-            <vg-time-display
-              vgProperty="total"
-              vgFormat="mm:ss"
-            ></vg-time-display>
-
-            <vg-track-selector></vg-track-selector>
-            <vg-mute></vg-mute>
-            <vg-volume></vg-volume>
-
-            <vg-fullscreen></vg-fullscreen>
-          </vg-controls>
-
-          <video #media [vgMedia]="$any(media)" id="singleVideo" preload="auto">
-            <source
-              src="https://b2b.sonypictures.ru/W/Spiderman%20No%20Way…r/Trailer%20E/SpiderManNWH_TR-E_Youtube_15dec.mp4"
-              type="video/mp4"
-            />
-            <track
-              kind="subtitles"
-              label="English"
-              src="assets/subs/pale-blue-dot.vtt"
-              srclang="en"
-              default
-            />
-            <track
-              kind="subtitles"
-              label="Español"
-              src="assets/subs/pale-blue-dot-es.vtt"
-              srclang="es"
-            />
-          </video>
-        </vg-player>
-      </div>
-    </div>
-    <!--{{videoItem.url}}-->
-    <!--http://static.videogular.com/assets/videos/videogular.mp4-->
+    <ng-template #showNotFound> Трейлер не найден </ng-template>
   </div>
 </div>
