--- a/apps/ux-films-finder/src/app/components/person-facts/person-facts.component.html
+++ b/apps/ux-films-finder/src/app/components/person-facts/person-facts.component.html
@@ -1,1 +1,6 @@
-<p class="person-facts">{{ fact }}</p>
+<div class="person-facts" *ngIf="facts.length !== 0">
+  <div class="person-facts__title">Факты</div>
+  <ng-container *ngFor="let factsItem of facts">
+    <p class="person-facts__fact">{{ factsItem }}</p>
+  </ng-container>
+</div>
