--- a/apps/ux-films-finder/src/app/components/person-films/person-films.component.less
+++ b/apps/ux-films-finder/src/app/components/person-films/person-films.component.less
@@ -1,10 +1,5 @@
 @import '../../../assets/styles/themes/base/common/shared';
 .person-film {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  margin-bottom: 32px;
-  white-space: nowrap;
-
   &__rating-name {
     display: flex;
     justify-content: start;
@@ -26,7 +21,17 @@
     justify-content: center;
     margin-right: 16px;
   }
-
+  &__films {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-bottom: 32px;
+    white-space: nowrap;
+  }
+  &__title {
+    line-height: 42px;
+    color: @color-gray-1b;
+    margin: 32px 0 8px 0;
+  }
   &__film-link {
     white-space: nowrap;
     color: @color-green-04;
@@ -45,6 +50,14 @@
     }
     &__rating {
       background: @color-gray-1b;
+    }
+  }
+}
+@media (max-width: 800px) {
+  .person-film {
+    &__title {
+      font-size: 20px;
+      line-height: 42px;
     }
   }
 }
