--- a/apps/ux-films-finder/src/app/components/person-spouses/person-spouses.component.html
+++ b/apps/ux-films-finder/src/app/components/person-spouses/person-spouses.component.html
@@ -1,23 +1,36 @@
-<div class="person-spouses__relation">
-  <div class="person-spouses__icon-and-name">
-    <mat-icon
-      class="person-spouses__icon"
-      [ngClass]="relation === SPOUSES.WIFE ? '_female' : '_male'"
-    >
-      {{ relation === SPOUSES.WIFE ? 'female' : 'male' }}
-    </mat-icon>
+<div class="person-spouses">
+  <div class="person-spouses__spouses" *ngIf="spouses?.length !== 0">
+    <div class="person-spouses__title">Отношения</div>
+    <ng-container *ngFor="let spousesItem of spouses">
+      <div class="person-spouses__relation">
+        <div class="person-spouses__icon-and-name">
+          <mat-icon
+            class="person-spouses__icon"
+            [ngClass]="
+              spousesItem.relation === SPOUSES.WIFE ? '_female' : '_male'
+            "
+          >
+            {{ spousesItem.relation === SPOUSES.WIFE ? 'female' : 'male' }}
+          </mat-icon>
 
-    <a
-      class="person-spouses__spouses-link"
-      routerLink="/persons/{{ personId }}"
-    >
-      {{ name }}
-    </a>
-  </div>
-  <div class="person-spouses__divorced">
-    {{ divorced ? 'Разведены' : 'В браке' }}
-  </div>
-  <div class="person-spouses__children">
-    {{ children !== 0 ? 'Детей ' + children : 'Детей нет' }}
+          <a
+            class="person-spouses__spouses-link"
+            routerLink="/persons/{{ spousesItem.personId }}"
+          >
+            {{ spousesItem.name }}
+          </a>
+        </div>
+        <div class="person-spouses__divorced">
+          {{ spousesItem.divorced ? 'Разведены' : 'В браке' }}
+        </div>
+        <div class="person-spouses__children">
+          {{
+            spousesItem.children !== 0
+              ? 'Детей ' + spousesItem.children
+              : 'Детей нет'
+          }}
+        </div>
+      </div>
+    </ng-container>
   </div>
 </div>
