--- a/apps/ux-films-finder/src/app/components/details/details.component.html
+++ b/apps/ux-films-finder/src/app/components/details/details.component.html
@@ -89,5 +89,6 @@
     </div>
     <ff-screen-gallery [filmId]="filmInfo.kinopoiskId"> </ff-screen-gallery>
     <ff-similar-films [filmId]="filmInfo.kinopoiskId"></ff-similar-films>
+    <ff-reviews [filmId]="filmInfo.kinopoiskId"></ff-reviews>
   </ng-container>
 </div>
