new color-title.const.ts title-films-list

--- a/apps/ux-films-finder/src/app/components/genre-label/genre-label.component.less
+++ b/apps/ux-films-finder/src/app/components/genre-label/genre-label.component.less
@@ -116,7 +116,7 @@
   &._talk-show {
     background-color: @color-genre-talk-show;
   }
-  &.children {
+  &._children {
     background-color: @color-genre-children;
   }
   &._music {
