--- a/apps/ux-films-finder/src/app/components/title-films-list/title-films-list.component.less
+++ b/apps/ux-films-finder/src/app/components/title-films-list/title-films-list.component.less
@@ -5,7 +5,6 @@
   &__stripe {
     display: flex;
     justify-content: space-between;
-    background: blue;
     height: 120px;
     &:after,
     &:before {
@@ -31,16 +30,16 @@
     background-color: @color-genre-horror;
   }
 
-  &._adventures {
-    background-color: @color-genre-adventures;
+  &._adventure {
+    background-color: @color-genre-adventure;
   }
 
   &._thriller {
     background-color: @color-genre-thriller;
   }
 
-  &._melodrama {
-    background-color: @color-genre-melodrama;
+  &._romance {
+    background-color: @color-genre-romance;
   }
 
   &._fantasy {
@@ -117,17 +116,17 @@
   &._ceremony {
     background-color: @color-genre-ceremony;
   }
-  &._real-tv {
-    background-color: @color-genre-real-tv;
+  &._live {
+    background-color: @color-genre-live;
   }
   &._game {
     background-color: @color-genre-game;
   }
-  &._talk-show {
-    background-color: @color-genre-talk-show;
+  &._show {
+    background-color: @color-genre-show;
   }
-  &.children {
-    background-color: @color-genre-children;
+  &._for-children {
+    background-color: @color-genre-for-children;
   }
   &._music {
     background-color: @color-genre-music;
