--- a/apps/ux-films-finder/src/app/components/title-films-list/title-films-list.component.html
+++ b/apps/ux-films-finder/src/app/components/title-films-list/title-films-list.component.html
@@ -1,5 +1,7 @@
 <div class="title-films-list" [ngClass]="color[titleGenres]">
   <div class="title-films-list__stripe">
-    <div class="title-films-list__genres">{{ titleGenres }}</div>
+    <div class="title-films-list__genres">
+      {{ name[titleGenres] }}
+    </div>
   </div>
 </div>
