new genres-banner__title genres-banner.component

--- a/apps/ux-films-finder/src/app/components/genres-banner/genres-banner.component.html
+++ b/apps/ux-films-finder/src/app/components/genres-banner/genres-banner.component.html
@@ -1,7 +1,11 @@
 <div class="genres-banner">
   <div class="genres-banner__title">
-    <h1>Все жанры фильмов ></h1>
-    <p>(Комедия, хоррер, боевик, драма, семейный и многое другое)</p>
+    <div class="genres-banner__title-main">
+      TV Сериалы, Фильмы и Анимации в одном месте!
+    </div>
+    <div class="genres-banner__title-minor">
+      (Спорт, Ток-Шоу, Танцы, Детские программы и многое другое)
+    </div>
   </div>
   <div class="genres-banner__slider keen-slider" #sliderRef>
     <a routerLink="/comedy" class="genres-banner__slide-link">
