--- a/apps/ux-films-finder/src/app/components/genres-banner/genres-banner.component.less
+++ b/apps/ux-films-finder/src/app/components/genres-banner/genres-banner.component.less
@@ -2,19 +2,17 @@
 @import '../../../assets/styles/themes/base/common/shared';
 
 .genres-banner {
-  width: 70%;
-  margin: 16px auto;
-
   &__title {
-    p {
-      font-size: 16px;
-      letter-spacing: 2px;
+    color: @color-black-00;
+    margin: 54px 76px;
+    text-align: center;
+    &-main {
+      font-weight: 400;
+      font-size: 50px;
+      margin-bottom: 50px;
     }
-
-    h1 {
-      font-size: 24px;
-      line-height: 1;
-      font-weight: 600;
+    &-minor {
+      font-size: 25px;
     }
   }
   &__slide {
