new genres-banner__slider keen-slider genres-banner.component

--- a/apps/ux-films-finder/src/app/components/genres-banner/genres-banner.component.less
+++ b/apps/ux-films-finder/src/app/components/genres-banner/genres-banner.component.less
@@ -16,15 +16,11 @@
     }
   }
   &__slide {
-    display: flex;
-    align-items: end;
-    justify-content: end;
-    font-size: 50px;
-    color: #fff;
-    font-weight: 500;
-    height: 400px;
+    margin: 0 79px;
+    font-size: 32px;
+    color: @color-white-ff;
+    height: 530px;
     border-radius: 16px;
-    padding: 8px;
     &._comedy {
       background-size: cover;
       background: url('../../../assets/images/comedy.jpg') center;
@@ -71,9 +67,9 @@
     }
   }
   &__slider {
+    margin: 0 auto;
   }
   &__slide-link {
-    color: @color-white-ff;
     text-decoration: none;
   }
   &__dots {
