--- a/apps/ux-films-finder/src/app/components/genres-banner/genres-banner.component.html
+++ b/apps/ux-films-finder/src/app/components/genres-banner/genres-banner.component.html
@@ -1,12 +1,5 @@
+<ff-styles-for-genres-banner></ff-styles-for-genres-banner>
 <div class="genres-banner">
-  <div class="genres-banner__title">
-    <div class="genres-banner__title-main">
-      TV Сериалы, Фильмы и Анимации в одном месте!
-    </div>
-    <div class="genres-banner__title-minor">
-      (Спорт, Ток-Шоу, Танцы, Детские программы и многое другое)
-    </div>
-  </div>
   <div class="genres-banner__slider keen-slider" #sliderRef>
     <a routerLink="/comedy" class="genres-banner__slide-link">
       <div class="genres-banner__slide _comedy keen-slider__slide">comedy</div>
