--- a/apps/ux-films-finder/src/app/components/genres-banner/genres-banner.component.less
+++ b/apps/ux-films-finder/src/app/components/genres-banner/genres-banner.component.less
@@ -2,25 +2,19 @@
 @import '../../../assets/styles/themes/base/common/shared';
 
 .genres-banner {
-  &__title {
-    color: @color-black-00;
-    margin: 54px 76px;
-    text-align: center;
-    &-main {
-      font-weight: 400;
-      font-size: 50px;
-      margin-bottom: 50px;
-    }
-    &-minor {
-      font-size: 25px;
-    }
-  }
+  width: 70%;
+  margin: 16px auto;
+
   &__slide {
-    margin: 0 79px;
-    font-size: 32px;
-    color: @color-white-ff;
-    height: 530px;
+    display: flex;
+    align-items: end;
+    justify-content: end;
+    font-size: 50px;
+    color: #fff;
+    font-weight: 500;
+    height: 400px;
     border-radius: 16px;
+    padding: 8px;
     &._comedy {
       background-size: cover;
       background: url('../../../assets/images/comedy.jpg') center;
@@ -67,9 +61,9 @@
     }
   }
   &__slider {
-    margin: 0 auto;
   }
   &__slide-link {
+    color: @color-white-ff;
     text-decoration: none;
   }
   &__dots {
