new __slide-link-genre genres-banner.component

--- a/apps/ux-films-finder/src/app/components/styles-for-genres-banner/styles-for-genres-banner.component.less
+++ b/apps/ux-films-finder/src/app/components/styles-for-genres-banner/styles-for-genres-banner.component.less
@@ -14,3 +14,12 @@
     font-size: 25px;
   }
 }
+.theme-dark {
+  & .styles-for-genres-banner {
+    &__main,
+    &__minor {
+      background-color: @color-gray-1b;
+      color: @color-white-ff;
+    }
+  }
+}
