--- a/apps/ux-films-finder/src/app/components/genres-banner/genres-banner.component.html
+++ b/apps/ux-films-finder/src/app/components/genres-banner/genres-banner.component.html
@@ -2,39 +2,75 @@
 <div class="genres-banner">
   <div class="genres-banner__slider keen-slider" #sliderRef>
     <a routerLink="/comedy" class="genres-banner__slide-link">
-      <div class="genres-banner__slide _comedy keen-slider__slide">comedy</div>
+      <div class="genres-banner__slide _comedy keen-slider__slide">
+        <div class="genres-banner__slide-link-genre _comedy">
+          <div class="genres-banner__slide-link-genre-title">Комедии</div>
+        </div>
+      </div>
     </a>
+
     <a routerLink="/horror" class="genres-banner__slide-link">
-      <div class="genres-banner__slide _horror keen-slider__slide">horror</div>
+      <div class="genres-banner__slide _horror keen-slider__slide">
+        <div class="genres-banner__slide-link-genre _horror">
+          <div class="genres-banner__slide-link-genre-title">Ужасы</div>
+        </div>
+      </div>
     </a>
+
     <a routerLink="/action" class="genres-banner__slide-link">
-      <div class="genres-banner__slide _action keen-slider__slide">action</div>
+      <div class="genres-banner__slide _action keen-slider__slide">
+        <div class="genres-banner__slide-link-genre _action">
+          <div class="genres-banner__slide-link-genre-title">Боевик</div>
+        </div>
+      </div>
     </a>
+
     <a routerLink="/drama" class="genres-banner__slide-link">
-      <div class="genres-banner__slide _drama keen-slider__slide">drama</div>
+      <div class="genres-banner__slide _drama keen-slider__slide">
+        <div class="genres-banner__slide-link-genre _drama">
+          <div class="genres-banner__slide-link-genre-title">Драма</div>
+        </div>
+      </div>
     </a>
+
     <a routerLink="/adventure" class="genres-banner__slide-link">
       <div class="genres-banner__slide _adventure keen-slider__slide">
-        adventure
+        <div class="genres-banner__slide-link-genre _adventure">
+          <div class="genres-banner__slide-link-genre-title">Приключение</div>
+        </div>
       </div>
     </a>
+
     <a routerLink="/fantasy" class="genres-banner__slide-link">
       <div class="genres-banner__slide _fantasy keen-slider__slide">
-        fantasy
+        <div class="genres-banner__slide-link-genre _fantasy">
+          <div class="genres-banner__slide-link-genre-title">Фэнтэзи</div>
+        </div>
       </div>
     </a>
+
     <a routerLink="/thriller" class="genres-banner__slide-link">
       <div class="genres-banner__slide _thriller keen-slider__slide">
-        thriller
+        <div class="genres-banner__slide-link-genre _thriller">
+          <div class="genres-banner__slide-link-genre-title">Триллер</div>
+        </div>
       </div>
     </a>
+
     <a routerLink="/romance" class="genres-banner__slide-link">
       <div class="genres-banner__slide _romance keen-slider__slide">
-        romance
+        <div class="genres-banner__slide-link-genre _romance">
+          <div class="genres-banner__slide-link-genre-title">Мелодрама</div>
+        </div>
       </div>
     </a>
+
     <a routerLink="/family" class="genres-banner__slide-link">
-      <div class="genres-banner__slide _family keen-slider__slide">family</div>
+      <div class="genres-banner__slide _family keen-slider__slide">
+        <div class="genres-banner__slide-link-genre _family">
+          <div class="genres-banner__slide-link-genre-title">Семейный</div>
+        </div>
+      </div>
     </a>
   </div>
   <div class="genres-banner__dots">
