--- a/apps/ux-films-finder/src/app/components/genres-banner/genres-banner.component.less
+++ b/apps/ux-films-finder/src/app/components/genres-banner/genres-banner.component.less
@@ -8,21 +8,16 @@
   &__slide {
     display: flex;
     align-items: end;
-    justify-content: end;
-    font-size: 50px;
-    color: #fff;
-    font-weight: 500;
     height: 400px;
     border-radius: 16px;
-    padding: 8px;
-    &._comedy {
-      background-size: cover;
-      background: url('../../../assets/images/comedy.jpg') center;
-    }
 
     &._horror {
       background-size: cover;
       background: url('../../../assets/images/horror.jpg') center;
+    }
+    &._comedy {
+      background-size: cover;
+      background: url('../../../assets/images/comedy.jpg') center;
     }
 
     &._action {
@@ -60,11 +55,50 @@
       background: url('../../../assets/images/family.jpg') center;
     }
   }
-  &__slider {
-  }
   &__slide-link {
-    color: @color-white-ff;
-    text-decoration: none;
+    &-genre {
+      position: absolute;
+      width: 100%;
+      height: 70px;
+      display: flex;
+      margin-bottom: 10px;
+
+      &-title {
+        position: absolute;
+        left: 24px;
+        bottom: 24px;
+        font-size: 32px;
+        line-height: 20px;
+        color: @color-white-ff;
+      }
+      &._horror {
+        background: @color-genre-horror;
+      }
+      &._comedy {
+        background: @color-genre-comedy;
+      }
+      &._action {
+        background: @color-genre-action;
+      }
+      &._drama {
+        background: @color-genre-drama;
+      }
+      &._adventure {
+        background: @color-genre-adventures;
+      }
+      &._fantasy {
+        background: @color-genre-fantasy;
+      }
+      &._thriller {
+        background: @color-genre-thriller;
+      }
+      &._romance {
+        background: @color-genre-melodrama;
+      }
+      &._family {
+        background: @color-genre-family;
+      }
+    }
   }
   &__dots {
     display: flex;
@@ -87,7 +121,7 @@
     }
 
     &.active {
-      background: #000;
+      background: @color-black-00;
     }
   }
 }
