--- a/apps/ux-films-finder/src/styles.less
+++ b/apps/ux-films-finder/src/styles.less
@@ -5,3 +5,4 @@
 //common
 @import 'assets/styles/themes/base/common/shared';
 @import 'assets/styles/themes/dark/common/shared';
+@import 'assets/styles/themes/base/common/center-content';
