new triangles-genres.svg genres-banner.component

--- a/apps/ux-films-finder/src/app/components/genres-banner/genres-banner.component.less
+++ b/apps/ux-films-finder/src/app/components/genres-banner/genres-banner.component.less
@@ -62,7 +62,15 @@
       height: 70px;
       display: flex;
       margin-bottom: 10px;
-
+      background: @color-gray-66;
+      &:after {
+        position: absolute;
+        width: 244px;
+        height: 86px;
+        left: 230px;
+        content: '';
+        background: url('../../../assets/images/triangles-genres.svg') no-repeat;
+      }
       &-title {
         position: absolute;
         left: 24px;
