new genres-banner.component

--- a/apps/ux-films-finder/src/app/components/genres-banner/genres-banner.component.html
+++ b/apps/ux-films-finder/src/app/components/genres-banner/genres-banner.component.html
@@ -1,5 +1,11 @@
-<ff-styles-for-genres-banner></ff-styles-for-genres-banner>
 <div class="genres-banner">
+  <div class="genres-banner__main">
+    TV Сериалы, Фильмы и Анимации в одном месте!
+  </div>
+  <div class="genres-banner__minor">
+    (Спорт, Ток-Шоу, Танцы, Детские программы и многое другое)
+  </div>
+
   <div class="genres-banner__slider keen-slider" #sliderRef>
     <a routerLink="/comedy" class="genres-banner__slide-link">
       <div class="genres-banner__slide _comedy keen-slider__slide">
