--- a/apps/ux-films-finder/src/app/components/genres-banner/genres-banner.component.less
+++ b/apps/ux-films-finder/src/app/components/genres-banner/genres-banner.component.less
@@ -2,8 +2,19 @@
 @import '../../../assets/styles/themes/base/common/shared';
 
 .genres-banner {
-  width: 70%;
-  margin: 16px auto;
+  max-width: 1600px;
+  color: @color-black-00;
+  text-align: center;
+  margin: 0 150px;
+  &__main {
+    font-weight: 400;
+    font-size: 50px;
+    margin: 54px 0 50px;
+  }
+  &__minor {
+    font-size: 25px;
+    margin: 0 0 54px;
+  }
 
   &__slide {
     display: flex;
@@ -11,15 +22,16 @@
     height: 400px;
     border-radius: 16px;
 
+    &._comedy {
+      width: 100%;
+      height: 400px;
+      object-fit: contain;
+      background: url('../../../assets/images/comedy.jpg') no-repeat center;
+    }
     &._horror {
       background-size: cover;
       background: url('../../../assets/images/horror.jpg') center;
     }
-    &._comedy {
-      background-size: cover;
-      background: url('../../../assets/images/comedy.jpg') center;
-    }
-
     &._action {
       background-size: cover;
       background: url('../../../assets/images/action.jpg') center;
@@ -130,6 +142,14 @@
 
     &.active {
       background: @color-black-00;
+    }
+  }
+}
+.theme-dark {
+  & .genres-banner {
+    &__main,
+    &__minor {
+      color: @color-white-ff;
     }
   }
 }
