--- a/apps/ux-films-finder/src/app/components/person/person.component.html
+++ b/apps/ux-films-finder/src/app/components/person/person.component.html
@@ -133,7 +133,7 @@
             </ng-template>
             <a
               class="person__film-name"
-              routerLink="/details/{{ filmsItem?.filmId }}"
+              routerLink="/details/{{ filmsItem?.kinopoiskId }}"
               >{{ filmsItem.nameRu || filmsItem.nameEn }}
             </a>
           </div>
