new genres.const.ts

--- a/apps/ux-films-finder/src/app/components/genre-label/genre-label.component.html
+++ b/apps/ux-films-finder/src/app/components/genre-label/genre-label.component.html
@@ -1,1 +1,1 @@
-<div class="genre-label" [ngClass]="color[genres]">{{ genres }}</div>
+<div class="genre-label" [ngClass]="name[genres]">{{ genres }}</div>
