new GenresPipe pipe.ts

--- a/apps/ux-films-finder/src/app/components/genre-label/genre-label.component.html
+++ b/apps/ux-films-finder/src/app/components/genre-label/genre-label.component.html
@@ -1,1 +1,3 @@
-<div class="genre-label" [ngClass]="name[genres]">{{ genres }}</div>
+<div class="genre-label" [ngClass]="genres | genre">
+  {{ genres }}
+</div>
