--- a/apps/ux-films-finder/src/app/components/genres-banner/genres-banner.component.less
+++ b/apps/ux-films-finder/src/app/components/genres-banner/genres-banner.component.less
@@ -73,20 +73,21 @@
       width: 100%;
       height: 70px;
       display: flex;
-      margin-bottom: 10px;
+      margin-bottom: 25px;
       background: @color-gray-66;
       &:after {
         position: absolute;
         width: 244px;
         height: 86px;
-        left: 230px;
+        right: -3px;
         content: '';
         background: url('../../../assets/images/triangles-genres.svg') no-repeat;
       }
       &-title {
         position: absolute;
-        left: 24px;
-        bottom: 24px;
+        margin: 24px 24px;
+
+        //bottom: 24px;
         font-size: 32px;
         line-height: 20px;
         color: @color-white-ff;
